a few dian mission event locs

--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -23,7 +23,7 @@
  dian_missions_task_5_DESC: "The peoples of the land of [GetCountry('SMI').GetName] share many of our cultural practices, and hold strategic lands just to our north, on the path to #E Sichuan#!. If we should happen to incorporate them, either by diplomacy or by force, then we will be a prime position to dominate the whole of the #E Nanzhong#! region."
 
  dian_missions_task_6: "To The Coast"
- dian_missions_task_6_DESC: "The prosperous trade of the #Y Pearl River#! and Great Ocean lay just to our southeast, lord [ROOT.GetCountry.GetRuler.GetName]. While numerous barbarian peoples lay between [ROOT.GetCountry.GetName] and the coast, subduing these rowdy clans should be a simple task."
+ dian_missions_task_6_DESC: "The prosperous trade of the #Y Red River#! and Great Ocean lay just to our southeast, lord [ROOT.GetCountry.GetRuler.GetName]. While numerous barbarian peoples lay between [ROOT.GetCountry.GetName] and the coast, subduing these rowdy clans should be a simple task."
 
  dian_missions_task_7: "The Age Of Bronze"
  dian_missions_task_7_DESC: "Bronzeware production has been a hallmark of [ROOT.GetCountry.GetName] for many generations, with ceremonial objects being used for rituals at court and exported abroad. Our metalsmiths require an expansion of the tin and copper mines, as well as new workshops, to meet the demands for our fine wares, and to produce objects worthy of your palace, lord [ROOT.GetCountry.GetRuler.GetName]."
@@ -32,7 +32,7 @@
  dian_missions_task_8_DESC: "Our increasing relation with the [GetCountry('CHU').GetName] peoples is beginning to show us just how much we have yet to learn, King [ROOT.GetCountry.GetRuler.GetName]. The #E Chu#! have teased but a few of their technological secrets to us, but if we are to control our own destiny, we must elevate #E Chu#! nobles to positions of power to persuade them to share their innovations with the Kingdom of [ROOT.GetCountry.GetName]."
 
  dian_missions_task_9: "Twice The Pride, Double The Fall" 
- dian_missions_task_9_DESC: "Our primary rival in the lands south of the #Y Yangtze River#!, the [GetCountry('YLG').GetName], has been a constant pain the rear end of King [ROOT.GetCountry.GetRuler.GetName], resisting cooperation and friendship at every turn. We should extinguish the arrogant upstarts once and for all, and sing tales of their demise."
+ dian_missions_task_9_DESC: "Our primary rival in the lands south of the #Y Yangtze River#!, the [GetCountry('YLG').GetName], has been a constant pain the rear end of King [ROOT.GetCountry.GetRuler.GetName], resisting cooperation and friendship at every turn. It is even said that their ruler, [GetCountry('YLG').GetRuler.GetName], believes himself equal or greater than the #E Huaxia#! kings and the #Y Son of Heaven#!. We should extinguish the arrogant upstarts once and for all, and sing tales of their demise."
 
  dian_missions_task_10: "We Need More Shells"
  dian_missions_task_10_DESC: "Among the most lucrative trading networks along the coasts of the Great Ocean is that of the shells, particularly tortoiseshell and cowrie shells. Should [ROOT.GetCountry.GetName] claim the territories necessary to dominate this trade, the coffers of the imperial treasury will surely begin to overflow!"
@@ -64,15 +64,15 @@
 
  #Events 
  me_dian_1_title: "$dian_missions_task_1$"
- me_dian_1_desc: ""
+ me_dian_1_desc: "In every corner of their valleys, and atop every mountain of their lands, the resistance of the [GetCountry('TB2').GetName] tribes has been extinguished. Some clans perished fighting, with others became slaves, allowing themselves to be captured as prisoners of war. The remaining populace will work the lands in servitude of our lord [ROOT.GetCountry.GetRuler.GetName], as loyal subjects of [ROOT.GetCountry.GetName]."
  me_dian_1.a: "The Kunming will bow to us."
 
  me_dian_2_title: "$dian_missions_task_2$"
- me_dian_2_desc: ""
+ me_dian_2_desc: "The eastern tribesmen of #E Xinggu#! we of no match for our superiority in manpower and tactics. The barbarians charged headlong into the fray, screaming violently to instill terror into the hearts of the men of [ROOT.GetCountry.GetName]. Just as the men were beginning to lose some nerve, our King [ROOT.GetCountry.GetRuler.GetName] rode up from the rear of the enemy, catching them by surprise as their formations melted between anvil and hammer. The remaining clans of the area quickly sued for peace."
  me_dian_2.a: "The easterlands have been subjugated!"
 
  me_dian_3_title: "$dian_missions_task_3$"
- me_dian_3_desc: ""
+ me_dian_3_desc: "The recommended financing of the construction of new enclosures and farms has paid off, King [ROOT.GetCountry.GetRuler.GetName]. New shipments of meat and rice are pouring into the city of [GetProvince('(int32)8914').GetName], filling the bellies of hungry peasants and stocking our rice stores in case of future famine."
  me_dian_3.a: "Our people will be well fed."
 
  me_dian_4_title: "$dian_missions_task_4$"
@@ -88,15 +88,15 @@
  me_dian_401.a: ""
 
  me_dian_5_title: "$dian_missions_task_5$"
- me_dian_5_desc: ""
+ me_dian_5_desc: "The [GetCountry('SMI').GetName] clansmen to our north have finally come under the sway of [ROOT.GetCountry.GetName], my lord! Your majesty, [ROOT.GetCountry.GetRuler.GetName], graciously accepted the surrender of the tribal elites which ruled the principal settlements of their lands, while killing or taking prisoner the few who opposed us. The #E Dian#! people are now united under one banner."
  me_dian_5.a: "The Shoumi kinfolk are now in our domain."
 
  me_dian_6_title: "$dian_missions_task_6$"
- me_dian_6_desc: ""
+ me_dian_6_desc: "As King [ROOT.GetCountry.GetRuler.GetName] sailed along the #Y Red River#!, he could finally see the coast of the Great Sea in the distance. A host of trade ships were moving along the coast in the distance, with some also seemingly anchored at port. While the journey through the jungles and barbarian lands was no easy task, [ROOT.GetCountry.GetRuler.GetName] felt validated in his quest to seek dominion over the Great Ocean as the potential for profit filled his eyes at the sight of these ships."
  me_dian_6.a: "We will become rich from coastal trade!"
 
  me_dian_7_title: "$dian_missions_task_7$"
- me_dian_7_desc: ""
+ me_dian_7_desc: "After the construction of new workshops and mining operations in the lands of [ROOT.GetCountry.GetName], our artisans and metalsmiths have been hard at work fashioning new bronzewares to be used as ritual pieces. One piece of art depicted a finely constructed home, replete with all of the typical household items of a [GetProvince('(int32)8914').GetName] home in miniature form. A second work depicted a humble servant, shielding our King [ROOT.GetCountry.GetRuler.GetName] from the harsh summer sun with a parasol. Both works were immediately hailed by the king and placed in our holy reliquary."
  me_dian_7.a: "Our metalwork is second to none."
 
  me_dian_8_title: "$dian_missions_task_8$"
