Missing Dian Event

--- a/localization/english/missions/dian_missions_l_english.yml
+++ b/localization/english/missions/dian_missions_l_english.yml
@@ -50,7 +50,7 @@
  dian_missions_task_14_DESC: "While we have had time to reconcile with the invasion of #E Chu#! generals, we will not forget the transgressions against our venerable kingdom. The military strategists in the court of [ROOT.GetCountry.GetName] believe now is the time to return the favor to the [GetCountry('CHU').GetName]; we should strike forth into the #E Jing#! region south of the #Y Yangtze River#! and claim the vast lands for ourselves!"
 
  dian_missions_task_15: "New Capital"
- dian_missions_task_15_DESC: "The Kingdom of [ROOT.GetCountry.GetName] has become a bastion of civilization in #E Nanzhong#!, o lord [ROOT.GetCountry.GetRuler.GetName]. But our capital at [GetProvince('(int32)8914').GetName] is becoming overcrowded with a lack of housing, and does not yet possess the architectural brilliance of the states of the #E Middle Kingdom#!. We should contruct new buildings and palatial estates to display our newfound wealth and glory to both subjects and foreign dignitaries alike."
+ dian_missions_task_15_DESC: "The Kingdom of [ROOT.GetCountry.GetName] has become a bastion of civilization in #E Nanzhong#!, o lord [ROOT.GetCountry.GetRuler.GetName]. But our capital at [GetProvince('(int32)8914').GetName] is becoming overcrowded with a lack of housing, and does not yet possess the architectural brilliance of the states of the #E Middle Kingdom#!. We should construct new buildings and palatial estates to display our newfound wealth and glory to both subjects and foreign dignitaries alike."
 
  dian_missions_task_16: "Steppe Art"
  dian_missions_task_16_DESC: "While our contact with the #E Chu#! and the #E Huaxia#! peoples as whole has had by far the greatest impact on our cultural development, we must not ignore the influence on the #E Rong#! horsemen on our society. Indeed, their mastery of equine arts and cavalry tactics have long fascinated the court at [ROOT.GetCountry.GetName], and King [ROOT.GetCountry.GetRuler.GetName] wishes to hire artists to mimic the great art styles of the #E Rong#! by commissioning the creation of new vessels for our reliquaries."
@@ -147,6 +147,10 @@
  me_dian_15_title: "$dian_missions_task_15$"
  me_dian_15_desc: ""
  me_dian_15.a: "The new capital is a worthy seat for the Dian Kingdom."
+ 
+ me_dian_1500_title: "$dian_missions_task_15$"
+ me_dian_1500_desc: "Our men have started relocating our capital to a more favorable position on the southern shore of Lake Dian. The first oxen with stone blocks from our old capital's building are already on their way south."
+ me_dian_1500.a: "This requires hard labor."
 
  me_dian_16_title: "$dian_missions_task_16$"
  me_dian_16_desc: ""
@@ -174,7 +178,7 @@
  me_dian_18.a: "The Royal Seal will inspire awe and majesty in our court."
  
  me_dian_90_title: "Imminent Chu Invasion"
- me_dian_90_desc: ""
+ me_dian_90_desc: "Troubling news have reached us. [GetCountry('CHU').GetRuler.GetName] has eyed an invasion of our peaceful state. It is a must for us to prepare for the invaders and make the Dian people come out on top."
  me_dian_90.a: "This can't be good..."
 
  #Tooltips
@@ -214,11 +218,11 @@
  
  #Treasures
  dian_steppe_vessel: "Horseman Bronze Vessel"
- dian_steppe_vessel_desc: "TODO" #https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Kunming_Oct_2007_031.jpg/800px-Kunming_Oct_2007_031.jpg
+ dian_steppe_vessel_desc: "A splendid combination of a Dian bronze vessel with a steppe horse rider on top of it." #https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Kunming_Oct_2007_031.jpg/800px-Kunming_Oct_2007_031.jpg
  dian_shell_vessel: "Shell Storage Vessel" #https://upload.wikimedia.org/wikipedia/commons/e/e9/CMOC_Treasures_of_Ancient_China_exhibit_-_bronze_cowrie_container.jpg
- dian_shell_vessel_desc: "TODO"
+ dian_shell_vessel_desc: "The most beloved thing of a Dian, shells of all kinds, can find their place in this elaborate bronze storage vessel."
  dian_servant_with_parasol: "Dian Servant with Parasol"
- dian_servant_with_parasol_desc: "TODO" #https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG/800px-Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG
+ dian_servant_with_parasol_desc: "This statue of a Dian servant holding a parasol praises our new dynasty's divinity." #https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG/800px-Figure_with_parasol_%28bronze%2C_Western_Han%29_-_Yunnan_Provincial_Museum_-_DSC02253.JPG
  dian_bronze_house: "Dian Bronze House"
- dian_bronze_house_desc: "TODO" #https://upload.wikimedia.org/wikipedia/commons/c/c7/Bronze_house_Dian_Kingdom.Y%C3%BAnn%C3%A1n_Provincial_Museum.jpg
+ dian_bronze_house_desc: "Our artists cast various scenes of our subjects' daily life in bronze: women and men working around their bronze house and children playing." #https://upload.wikimedia.org/wikipedia/commons/c/c7/Bronze_house_Dian_Kingdom.Y%C3%BAnn%C3%A1n_Provincial_Museum.jpg
  
