--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -8,65 +8,65 @@
 #Missions
 
  xiongnu_missions_01_task_1: "Consolidate Our Clans"
- xiongnu_missions_01_task_1_DESC: "The leadership of the [ROOT.GetCountry.GetName] tribes is fractured and disorganized. If we over hope to compete with our neighbors we must consolidate the political leadership of the disparate [ROOT.GetCountry.GetName] tribes under the banner of one powerful dynasty."
+ xiongnu_missions_01_task_1_DESC: "The leadership of the [ROOT.GetCountry.GetName] tribes is fractured and disorganized. If we over hope to compete with our neighbors we must consolidate the political leadership of the disparate [ROOT.GetCountry.GetName] tribes under the banner of one powerful dynasty.\n\n\n\n\n\n\n\n\n\n@east_steppemil7!"
 
  xiongnu_missions_01_task_2: "Loyalty To Luandi"
- xiongnu_missions_01_task_2_DESC: "The blood of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family has been chosen to lead our tribal confederation to glory over our neighbors, with the promise of the spoils of war. Long live the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] line!"
+ xiongnu_missions_01_task_2_DESC: "The blood of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family has been chosen to lead our tribal confederation to glory over our neighbors, with the promise of the spoils of war. Long live the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] line!\n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
 
  xiongnu_missions_01_task_3: "Touman's Tribe"
- xiongnu_missions_01_task_3_DESC: "[ROOT.GetCountry.GetRuler.GetName] has shown great promise as both a warrior and strong political leader. He commands the respect of the various tribesmen of our realm, and is the best fit to lead the next generation of [ROOT.GetCountry.GetName] conquest and reform."
+ xiongnu_missions_01_task_3_DESC: "[ROOT.GetCountry.GetRuler.GetName] has shown great promise as both a warrior and strong political leader. He commands the respect of the various tribesmen of our realm, and is the best fit to lead the next generation of [ROOT.GetCountry.GetName] conquest and reform.\n\n\n\n\n\n\n\n\n\n@east_steppemil5!"
 
  xiongnu_missions_01_task_4: "Annex Anhou"
- xiongnu_missions_01_task_4_DESC: "Our brethren, the [GetCountry('AHO').GetName] tribes, have long vexed the [ROOT.GetCountry.GetName] by raiding our pasturelands and capturing our horses. It is time to unite them through conquest and bring the raids to an end."
+ xiongnu_missions_01_task_4_DESC: "Our brethren, the [GetCountry('AHO').GetName] tribes, have long vexed the [ROOT.GetCountry.GetName] by raiding our pasturelands and capturing our horses. It is time to unite them through conquest and bring the raids to an end.\n\n\n\n\n\n\n\n\n\n@east_steppemil1!"
 
  xiongnu_missions_01_task_5: "Dominate Dingling"
- xiongnu_missions_01_task_5_DESC: "The fabled [GetCountry('DLG').GetName] tribes are a northern nuisance, steadfastly independent and more adept to the harsh winters of #Y Lake Baikal#!. We must bring them under our banner by force to control the resources of that great lake and secure our northern borders from any raids and aggression."
+ xiongnu_missions_01_task_5_DESC: "The fabled [GetCountry('DLG').GetName] tribes are a northern nuisance, steadfastly independent and more adept to the harsh winters of #Y Lake Baikal#!. We must bring them under our banner by force to control the resources of that great lake and secure our northern borders from any raids and aggression.\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  xiongnu_missions_01_task_6: "Western Warmongering"
- xiongnu_missions_01_task_6_DESC: "It is time to strike out westward to dominate the various clans that have long held political sway over our lands. The vast wealth of the #E kurgans#! built by our western brothers shall be ours!"
+ xiongnu_missions_01_task_6_DESC: "It is time to strike out westward to dominate the various clans that have long held political sway over our lands. The vast wealth of the #E kurgans#! built by our western brothers shall be ours!\n\n\n\n\n\n\n\n\n\n@east_steppemil11!"
 
  xiongnu_missions_01_task_7: "Hoarding Horses"
- xiongnu_missions_01_task_7_DESC: "What are we without horses? We must breed more and better horses if we ever hope to continue to dominate the steppe."
+ xiongnu_missions_01_task_7_DESC: "What are we without horses? We must breed more and better horses if we ever hope to continue to dominate the steppe.\n\n\n\n\n\n\n\n\n\n@east_steppemil4!"
 
  xiongnu_missions_01_task_8: "Early Steppe Stirrups"
- xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that [ROOT.GetCountry.GetName] hard-wood saddles contributed to the development and proliferation of technological advancements that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves."
+ xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that [ROOT.GetCountry.GetName] hard-wood saddles contributed to the development and proliferation of technological advancements that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves.\n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  xiongnu_missions_01_task_9: "Prairies And Pastures"
- xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the [ROOT.GetCountry.GetName] political leadership."
+ xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the [ROOT.GetCountry.GetName] political leadership.\n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
 
  xiongnu_missions_01_task_10: "Foreign Tribute"
- xiongnu_missions_01_task_10_DESC: "We need to exact tribute from some of the lesser tribes to fuel our conquests across the steppe - before integrating their lands into our realm directly."
+ xiongnu_missions_01_task_10_DESC: "We need to exact tribute from some of the lesser tribes to fuel our conquests across the steppe - before integrating their lands into our realm directly.\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  xiongnu_missions_01_task_11: "Capital Breeding Grounds"
- xiongnu_missions_01_task_11_DESC: "Our growing seat of power at [ROOT.GetCountry.GetCapital.GetName] is becoming an ever-important nexus of trade, as we have the best horses and pasturelands north of the #Y Gobi#!. We should invest in the maintenance of dedicated breeding grounds in and around our capital to spur economic activity and maintain our grip on the horse and livestock trade."
+ xiongnu_missions_01_task_11_DESC: "Our growing seat of power at [ROOT.GetCountry.GetCapital.GetName] is becoming an ever-important nexus of trade, as we have the best horses and pasturelands north of the #Y Gobi#!. We should invest in the maintenance of dedicated breeding grounds in and around our capital to spur economic activity and maintain our grip on the horse and livestock trade.\n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 
  xiongnu_missions_01_task_12: "Southern Insults"
- xiongnu_missions_01_task_12_DESC: "Our arch-rival, the [GetCountry('YEZ').GetName], have long been the greatest threat to our growing might. Never again shall we live under the yolk of the southern horselords. The time has come to instigate hostilities with the [GetCountry('YEZ').GetName], now that our confederation can stand toe-to-toe with them."
+ xiongnu_missions_01_task_12_DESC: "Our arch-rival, the [GetCountry('YEZ').GetName], have long been the greatest threat to our growing might. Never again shall we live under the yolk of the southern horselords. The time has come to instigate hostilities with the [GetCountry('YEZ').GetName], now that our confederation can stand toe-to-toe with them.\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  xiongnu_missions_01_task_13: "Chanyu's Children"
- xiongnu_missions_01_task_13_DESC: "As [ROOT.GetCountry.GetRuler.GetName] grows older, we must begin to think about the next generation of [ROOT.GetCountry.GetName] leadership. The young Modun, born of one of #T Chanyu#! [ROOT.GetCountry.GetRuler.GetName]'s concubines, is strongly disfavored by the wife of the #T Chanyu#!. She will do wathever possible to secure the position of #T Chanyu#! for her own children at the expense of Modun."
+ xiongnu_missions_01_task_13_DESC: "As [ROOT.GetCountry.GetRuler.GetName] grows older, we must begin to think about the next generation of [ROOT.GetCountry.GetName] leadership. The young Modun, born of one of #T Chanyu#! [ROOT.GetCountry.GetRuler.GetName]'s concubines, is strongly disfavored by the wife of the #T Chanyu#!. She will do wathever possible to secure the position of #T Chanyu#! for her own children at the expense of Modun.\n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  xiongnu_missions_01_task_14: "The Mighty Modun"
- xiongnu_missions_01_task_14_DESC: "Despite gaining the ire of the #T Chanyu#!'s wife, Modun, the son of one of [ROOT.GetCountry.GetRuler.GetName]'s concubines, is proving his worth as a fierce steppe warrior. His charisma is magnetic to the tribal elite, disrupting the plans of the #T Chanyu#! to secure the positions of his children born of his true wife. Perhaps he can be placated with some role within our tribal governance structure while a plan is hatched..."
+ xiongnu_missions_01_task_14_DESC: "Despite gaining the ire of the #T Chanyu#!'s wife, Modun, the son of one of [ROOT.GetCountry.GetRuler.GetName]'s concubines, is proving his worth as a fierce steppe warrior. His charisma is magnetic to the tribal elite, disrupting the plans of the #T Chanyu#! to secure the positions of his children born of his true wife. Perhaps he can be placated with some role within our tribal governance structure while a plan is hatched...\n\n\n\n\n\n\n\n\n\n@tibet_mil6!"
 
  xiongnu_missions_01_task_15: "Hollow Out Hujie"
- xiongnu_missions_01_task_15_DESC: "The [GetCountry('HUJ').GetName] tribes sit at the doorstep of the vast western steppe lands, and have amassed considerable wealth at their #E kurgans#! over the centuries. The time has come to bring their tribes into the [ROOT.GetCountry.GetName] political order and seize their wealth for our own."
+ xiongnu_missions_01_task_15_DESC: "The [GetCountry('HUJ').GetName] tribes sit at the doorstep of the vast western steppe lands, and have amassed considerable wealth at their #E kurgans#! over the centuries. The time has come to bring their tribes into the [ROOT.GetCountry.GetName] political order and seize their wealth for our own.\n\n\n\n\n\n\n\n\n\n@east_steppemil6!"
 
  xiongnu_missions_01_task_16: "Jumping Jiankun"
- xiongnu_missions_01_task_16_DESC: "The Samoyed speaking [GetCountry('JIK').GetName] peoples have long been trade and cultural partners in the greater #E Scytho-Siberian#! world. It is time we claim their vast wealth for ourselves and fold them into our confederation."
+ xiongnu_missions_01_task_16_DESC: "The Samoyed speaking [GetCountry('JIK').GetName] peoples have long been trade and cultural partners in the greater #E Scytho-Siberian#! world. It is time we claim their vast wealth for ourselves and fold them into our confederation.\n\n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  xiongnu_missions_01_task_17: "Control Gobi"
- xiongnu_missions_01_task_17_DESC: "The #Y Gobi#! desert is both a vast wasteland and a highway to the riches of the #Y Yellow River#!. Controlling the routes through the #Y Gobi#! will allow for our raiding parties to reach further south and raid the rich lands of the #T Middle Kingdom#!."
+ xiongnu_missions_01_task_17_DESC: "The #Y Gobi#! desert is both a vast wasteland and a highway to the riches of the #Y Yellow River#!. Controlling the routes through the #Y Gobi#! will allow for our raiding parties to reach further south and raid the rich lands of the #T Middle Kingdom#!.\n\n\n\n\n\n\n\n\n\n\n@egypt_mil4!"
 
  xiongnu_missions_01_task_18: "Ordos Expedition"
- xiongnu_missions_01_task_18_DESC: "The most obvious first target across the #Y Gobi#! is the #Y Ordos Loop#!, a region of grasslands well-suited for nomadic herding and livestock breeding. Controlling this vast plain brings us to the doorstep of #E Chinese#! cities and brings vast new wealth to our steppe economy."
+ xiongnu_missions_01_task_18_DESC: "The most obvious first target across the #Y Gobi#! is the #Y Ordos Loop#!, a region of grasslands well-suited for nomadic herding and livestock breeding. Controlling this vast plain brings us to the doorstep of #E Chinese#! cities and brings vast new wealth to our steppe economy.\n\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  xiongnu_missions_01_task_19: "Warn Wusun"
- xiongnu_missions_01_task_19_DESC: "The piddling [GetCountry('WUS').GetName] tribe, a lesser cousin of our [GetCountry('YEZ').GetName] rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means."
+ xiongnu_missions_01_task_19_DESC: "The piddling [GetCountry('WUS').GetName] tribe, a lesser cousin of our [GetCountry('YEZ').GetName] rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means.\n\n\n\n\n\n\n\n\n\n@china_mil11!"
  xiongnu_missions_01_task_19_tt:0 "Challenge [GetCountry('WUS').GetRuler.GetName] to a duel with the character interaction."
 
  xiongnu_missions_01_task_20: "Rise Of The New Chanyu"
- xiongnu_missions_01_task_20_DESC: "A new #T Chanyu#! will rise to create a legacy of conquest and terror that will echo through the millenia..."
+ xiongnu_missions_01_task_20_DESC: "A new #T Chanyu#! will rise to create a legacy of conquest and terror that will echo through the millenia...\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
 
  #Events 
